changed fonts and fixed up some spacing/styling of lists

--- a/app/stylesheets/_typography.sass
+++ b/app/stylesheets/_typography.sass
@@ -12,6 +12,8 @@ $font-p4: 45.698px
 $font-p5: 59.407px
 $font-p6: 74.25875px
 
-$font-family-base: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif
-$font-family-special: $font-family-base 
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro:400,200,100,300,500,600,700)
+$font-family-base: "Advent Pro"
+// "Droid Sans", Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-special: $font-family-base
 $font-family-monospace: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace
