--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -123,7 +123,6 @@ h1, h2, h3, h4, h5
         span
           color: $c-right
           font-style: italic
-
         &.details
           display: inline-block
           font-size: $f-px * 0.66
@@ -131,19 +130,23 @@ h1, h2, h3, h4, h5
           word-wrap: break-word
           margin-left: 40px
           font-weight: lighter
-
         &.sponsor-logo
           display: inline-block
-
         &.long-text
           display: block
           padding: 16px
-          font-weight: lighter
+          font-weight: 100
           margin-right: 16px
           background: $tbd
           +square-corner-top-left(24px)
           margin-top: 8px
-          line-height: 24px
+          line-height: 28px
+          ul, ol
+            li
+              padding-bottom: 18px
+              line-height: 24px
+              list-style-type: disc
+              margin-left: 64px
 
         &.context
           font-size: $f-px * 0.66
